# camwatch

./: AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
config/: .gitignore  camwatch-defaults.yaml  camwatch-quick_start.yaml
src/: capture.py  config.py  detect_car.py  detect_car_plate.py  detect_face.py  detect_face_dlib.py  detect_motion.py  face_recog.py  face_trainer.py  frame.py  mqtt_helper.py  tasks.py  utils.py  video_writer.py
src/cascades/: README.md
